added link to the course

--- a/index.html
+++ b/index.html
@@ -43,11 +43,7 @@ MathJax.Hub.Config({
 <h2>Contact</h2>
 <p></p>
 <ul>
-<li><p><a href="https://campus-map.stanford.edu/?ID=04-030">Packard</a> 257,&nbsp;Stanford,&nbsp;CA 94305</p>
-</li>
-<li><p><a href="mailto:mtefagh@stanford.edu" target=&ldquo;blank&rdquo;>mtefagh@stanford.edu</a></p>
-</li>
-<li><p><a href="https://profiles.stanford.edu/mojtaba-tefagh">https://profiles.stanford.edu/mojtaba-tefagh</a></p>
+<li><p>TBD</p>
 </li>
 </ul>
 </td>
