--- a/teaching.html
+++ b/teaching.html
@@ -33,7 +33,7 @@ MathJax.Hub.Config({
 </div>
 </div>
 <h2>Current classes</h2>
-<h3><b>22494</b> Convex Optimization<br /></h3>
+<h3><a href="http://alum.sharif.ir/~mtefagh/"><b>22494</b> Convex Optimization</a><br /></h3>
 <p>Term: Spring 2020 | Units: 3 | Section: 01 | Students enrolled: 50 | Lectures: Sun, Tue 9:00&ndash;10:30am at Math 217 | Exam Date/Time: 1399/04/08 9:00am | Prerequisite: Linear Algebra I<br /></p>
 <table class="imgtable"><tr><td>
 <img src="https://dcp.stanford.edu/static/dcp_sandbox/images/convex.svg" alt="A quadratic function" width="100px" />&nbsp;</td>
