--- a/publications.html
+++ b/publications.html
@@ -29,28 +29,28 @@ MathJax.Hub.Config({
 <td id="layout-content">
 <div id="toptitle">
 <h1>Mojtaba Tefagh &ndash; Publications</h1>
-<div id="subtitle"><a href="http://math.sharif.edu/">Department of Mathematical Sciences</a>,&nbsp;<a href="http://www.sharif.ir/">Sharif University of Technology</a>
+<div id="subtitle"><a href="http://math.sharif.edu/">Department of Mathematical Sciences</a>,&nbsp;<a href="http://www.sharif.ir/">Sharif University of Technology</a>
 </div>
 </div>
 <dl>
-<dt><a href="https://mtefagh.github.io/swiftcore/">SWIFTCORE: a tool for the context-specific reconstruction of genome-scale metabolic networks</a></dt>
-<dd><p>
+<dt><a href="papers/swift.html">SWIFTCORE: a tool for the context-specific reconstruction of genome-scale metabolic networks</a></dt>
+<dd><p>
 M. Tefagh and S.P. Boyd, <i>BMC Bioinformatics</i>, 2020.</p></dd>
 <dt><a href="https://doi.org/10.1101/499251">Metabolic network reductions</a></dt>
-<dd><p>
+<dd><p>
 M. Tefagh and S.P. Boyd, <i>bioRxiv</i>, 2019.</p></dd>
-<dt><a href="papers/qfca.html">Quantitative flux coupling analysis</a></dt>
-<dd><p>
+<dt><a href="https://web.stanford.edu/~boyd/papers/qfca.html">Quantitative flux coupling analysis</a></dt>
+<dd><p>
 M. Tefagh and S.P. Boyd, <i>J. Math. Biol.</i>, 2019.</p></dd>
 <dt><a href="https://doi.org/10.1016/j.jtbi.2014.04.011">A mathematical approach to emergent properties of metabolic networks: Partial coupling relations, hyperarcs and flux ratios</a></dt>
-<dd><p>
-S.A. Marashi and M. Tefagh, <i>J. Theor. Biol.</i>, 2014.
+<dd><p>
+S.A. Marashi and M. Tefagh, <i>J. Theor. Biol.</i>, 2014.
 </p></dd>
 </dl>
 <h2>Dissertation</h2>
 <dl>
 <dt><a href="https://searchworks.stanford.edu/view/13249450">Applications of convex optimization in metabolic network analysis</a></dt>
-<dd><p>
+<dd><p>
 Advisor:&nbsp;<a href="https://web.stanford.edu/~boyd">Stephen P. Boyd</a></p></dd>
 </dl>
 </td>
