updated email address

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ MathJax.Hub.Config({
 </li>
 <li><p>(+98) 21 6616 5617</p>
 </li>
-<li><p><a href="mailto:mtefagh@alum.sharif.edu" target=&ldquo;blank&rdquo;>mtefagh@alum.sharif.edu</a></p>
+<li><p><a href="mailto:mtefagh@sharif.edu" target=&ldquo;blank&rdquo;>mtefagh@sharif.edu</a></p>
 </li>
 </ul>
 </td>
