--- a/publications.html
+++ b/publications.html
@@ -48,11 +48,11 @@ S.A. Marashi and M. Tefagh, <i>J. Theor. Biol.</i>, 2014.
 </p></dd>
 </dl>
 <h2>Dissertation</h2>
-<dl>
-<dt><a href="https://searchworks.stanford.edu/view/13249450">Applications of convex optimization in metabolic network analysis</a></dt>
-<dd><p>
-Advisor:&nbsp;<a href="https://web.stanford.edu/~boyd">Stephen P. Boyd</a></p></dd>
-</dl>
+<table class="imgtable"><tr><td>
+<img src="word_art.png" alt="Word cloud of keywords" width="200px" />&nbsp;</td>
+<td align="left"><p><a href="https://searchworks.stanford.edu/view/13249450">Applications of convex optimization in metabolic network analysis</a><br />
+Advisor:&nbsp;<a href="https://web.stanford.edu/~boyd">Stephen P. Boyd</a></p>
+</td></tr></table>
 </td>
 </tr>
 </table>
