--- a/teaching.html
+++ b/teaching.html
@@ -29,12 +29,12 @@ MathJax.Hub.Config({
 <td id="layout-content">
 <div id="toptitle">
 <h1>Mojtaba Tefagh &ndash; Teaching</h1>
-<div id="subtitle"><a href="http://math.sharif.edu/">Department of Mathematical Sciences</a>,&nbsp;<a href="http://www.sharif.ir/">Sharif University of Technology</a>
+<div id="subtitle"><a href="http://math.sharif.edu/">Department of Mathematical Sciences</a>,&nbsp;<a href="http://www.sharif.ir/">Sharif University of Technology</a>
 </div>
 </div>
 <h2>Current classes</h2>
-<h3><a href="http://alum.sharif.ir/~mtefagh/"><b>22494</b> Convex Optimization</a><br /></h3>
-<p>Term: Spring 2020 | Units: 3 | Section: 01 | Students enrolled: 50 | Lectures: Sun, Tue 9:00&ndash;10:30am at Math 217 | Exam Date/Time: 1399/04/08 9:00am | Prerequisite: Linear Algebra I<br /></p>
+<h3><a href="cvx/home.html"><b>22494</b> Convex Optimization</a><br /></h3>
+<p>Term: Spring 2020 | Units: 3 | Section: 01 | Students enrolled: 50 | Lectures: Sun, Tue 9:00&ndash;10:30am at Math 217 | Exam Date/Time: 1399/04/08&nbsp;9:00am | Prerequisite: Linear Algebra I<br /></p>
 <table class="imgtable"><tr><td>
 <img src="https://dcp.stanford.edu/static/dcp_sandbox/images/convex.svg" alt="A quadratic function" width="100px" />&nbsp;</td>
 <td align="left"><p>Convex sets, functions, and optimization problems. The basics of convex analysis and theory of convex programming: optimality conditions, duality theory, theorems of alternative, and applications. Least-squares, linear and quadratic programs, semidefinite programming, and geometric programming. Numerical algorithms for smooth and equality constrained problems; interior-point methods for inequality constrained problems. Applications to systems biology, computational geometry, statistics, machine learning, and electrical engineering. </p>
