updated the website

--- a/cvx/midterm.html
+++ b/cvx/midterm.html
@@ -53,7 +53,7 @@ MathJax.Hub.Config({
 </div>
 <div class="infoblock">
 <div class="blockcontent">
-<p>The midterm quiz is canceled due to the coronavirus outbreak and it is replaced by two <a href="http://alum.sharif.ir/~mtefagh/homework.html" target=&ldquo;blank&rdquo;>projects</a>.<br /></p>
+<p>The midterm quiz is canceled due to the novel coronavirus outbreak and it is replaced by two <a href="homework.html" target=&ldquo;blank&rdquo;>projects</a>.<br /></p>
 </div></div>
 <p>The midterm quiz will be in class on Sunday April 5. The quiz will be closed book and closed notes and will cover chapters 1 through 5 (Part I) of the textbook and the <a href="http://dcp.stanford.edu" target=&ldquo;blank&rdquo;>DCP rules</a>. We'll post (much) more information about the midterm quiz later.
 </p>
@@ -68,7 +68,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-06-05 07:47:26 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-06-05 07:54:24 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
