updated the website

--- a/papers/swift.html
+++ b/papers/swift.html
@@ -37,7 +37,7 @@ MathJax.Hub.Config({
 <li><p><a href="swift.pdf" target=&ldquo;blank&rdquo;>Manuscript</a><br />
 This is a post-peer-review, pre-copyedit version of an article published in <i>BMC Bioinformatics</i>. The final authenticated version is available online at: <a href="http://dx.doi.org/10.1186/s12859-020-3440-y" target=&ldquo;blank&rdquo;>http://dx.doi.org/10.1186/s12859-020-3440-y</a></p>
 </li>
-<li><p><a href="https://mtefagh.github.io/swiftcore/" target=&ldquo;blank&rdquo;>SWIFTCORE</a><br />
+<li><p><a href="https://mtefagh.github.io/swiftcore/" target=&ldquo;blank&rdquo;><tt>SWIFTCORE</tt></a><br />
 <b>Background:</b> High-throughput omics technologies have enabled the comprehensive reconstructions of genome-scale 
 metabolic networks for many organisms. However, only a subset of reactions is active in each cell which differs 
 from tissue to tissue or from patient to patient. Reconstructing a subnetwork of the generic metabolic network 
