updated the website

--- a/publications.html
+++ b/publications.html
@@ -29,10 +29,11 @@ MathJax.Hub.Config({
 <td id="layout-content">
 <div id="toptitle">
 <h1>Mojtaba Tefagh &ndash; Publications</h1>
-<div id="subtitle"><a href="http://math.sharif.edu/">Department of Mathematical Sciences</a>,&nbsp;<a href="http://www.sharif.ir/">Sharif University of Technology</a>
-</div>
+<div id="subtitle"><a href="http://math.sharif.edu/">Department of Mathematical Sciences</a>,&nbsp;<a href="http://www.sharif.ir/">Sharif University of Technology</a></div>
 </div>
-<dl>
+<table class="imgtable"><tr><td>
+<img src="word_art.png" alt="Word cloud of keywords" width="200px" />&nbsp;</td>
+<td align="left"><dl>
 <dt><a href="papers/swift.html">SWIFTCORE: a tool for the context-specific reconstruction of genome-scale metabolic networks</a></dt>
 <dd><p>
 M. Tefagh and S.P. Boyd, <i>BMC Bioinformatics</i>, 2020.</p></dd>
@@ -44,12 +45,11 @@ M. Tefagh and S.P. Boyd, <i>bioRxiv</i>, 2019.</p></dd>
 M. Tefagh and S.P. Boyd, <i>J. Math. Biol.</i>, 2019.</p></dd>
 <dt><a href="https://doi.org/10.1016/j.jtbi.2014.04.011">A mathematical approach to emergent properties of metabolic networks: Partial coupling relations, hyperarcs and flux ratios</a></dt>
 <dd><p>
-S.A. Marashi and M. Tefagh, <i>J. Theor. Biol.</i>, 2014.
-</p></dd>
+S.A. Marashi and M. Tefagh, <i>J. Theor. Biol.</i>, 2014.</p></dd>
 </dl>
-<h2>Dissertation</h2>
+</td></tr></table>
 <table class="imgtable"><tr><td>
-<img src="word_art.png" alt="Word cloud of keywords" width="200px" />&nbsp;</td>
+<img src="QR_code.png" alt="QR code" width="200px" />&nbsp;</td>
 <td align="left"><p><a href="https://searchworks.stanford.edu/view/13249450">Applications of convex optimization in metabolic network analysis</a><br />
 Advisor:&nbsp;<a href="https://web.stanford.edu/~boyd">Stephen P. Boyd</a></p>
 </td></tr></table>
