updated the website

--- a/publications.html
+++ b/publications.html
@@ -48,6 +48,7 @@ M. Tefagh and S.P. Boyd, <i>J. Math. Biol.</i>, 2019.</p></dd>
 S.A. Marashi and M. Tefagh, <i>J. Theor. Biol.</i>, 2014.</p></dd>
 </dl>
 </td></tr></table>
+<h2>Dissertation</h2>
 <table class="imgtable"><tr><td>
 <img src="QR_code.png" alt="QR code" width="200px" />&nbsp;</td>
 <td align="left"><p><a href="https://searchworks.stanford.edu/view/13249450">Applications of convex optimization in metabolic network analysis</a><br />
