updated the website

--- a/cvx/home.html
+++ b/cvx/home.html
@@ -26,8 +26,9 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="contact.html">Contact</a></div>
 <div class="menu-category">Course materials</div>
 <div class="menu-item"><a href="http://stanford.edu/~boyd/cvxbook/">Textbook</a></div>
-<div class="menu-item"><a href="quizzes.html">Quizzes</a></div>
 <div class="menu-item"><a href="https://vclass.ecourse.sharif.edu/ch/mtefagh">Webinars</a></div>
+<div class="menu-item"><a href="quizzes.html">Quizzes</a></div>
+<div class="menu-item"><a href="http://ocw.sharif.edu/course/id/203/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87-%D8%B9%D9%84%D9%88%D9%85-%D8%B1%DB%8C%D8%A7%D8%B6%DB%8C/%D8%A8%D9%87%DB%8C%D9%86%D9%87-%D8%B3%D8%A7%D8%B2%DB%8C-%D9%85%D8%AD%D8%AF%D8%A8---%D8%AF%D8%B1-%D8%AD%D8%A7%D9%84-%D8%AA%DA%A9%D9%85%DB%8C%D9%84.html">OCW</a></div>
 <div class="menu-category">Assignments</div>
 <div class="menu-item"><a href="homework.html">Homework</a></div>
 <div class="menu-item"><a href="readings.html">Readings</a></div>
@@ -53,7 +54,7 @@ MathJax.Hub.Config({
 </div>
 <div class="infoblock">
 <div class="blockcontent">
-<p>Term: Spring 2020 | Units: 3 | Section: 01 | Students enrolled: 50 | Lectures: Sun, Tue 9:00&ndash;10:30am @ Aleph 23 | Exam Date/Time: 6/28/20 9:00am | Prerequisite: Linear Algebra I</p>
+<p>Term: Spring 2020 | Units: 3 | Section: 01 | Students enrolled: 50 | Lectures: Sun, Tue 9:00&ndash;10:30am @ Aleph 23 | Exam Date/Time: 7/20/20 8:00am | Prerequisite: Linear Algebra I</p>
 </div></div>
 <table class="imgtable"><tr><td>
 <img src="https://dcp.stanford.edu/static/dcp_sandbox/images/convex.svg" alt="A quadratic function" width="100px" />&nbsp;</td>
@@ -82,7 +83,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-06-05 10:08:41 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-06-09 12:29:46 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
