--- a/cvx/courseinfo.html
+++ b/cvx/courseinfo.html
@@ -26,8 +26,9 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="contact.html">Contact</a></div>
 <div class="menu-category">Course materials</div>
 <div class="menu-item"><a href="http://stanford.edu/~boyd/cvxbook/">Textbook</a></div>
-<div class="menu-item"><a href="quizzes.html">Quizzes</a></div>
 <div class="menu-item"><a href="https://vclass.ecourse.sharif.edu/ch/mtefagh">Webinars</a></div>
+<div class="menu-item"><a href="quizzes.html">Quizzes</a></div>
+<div class="menu-item"><a href="http://ocw.sharif.edu/course/id/203/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87-%D8%B9%D9%84%D9%88%D9%85-%D8%B1%DB%8C%D8%A7%D8%B6%DB%8C/%D8%A8%D9%87%DB%8C%D9%86%D9%87-%D8%B3%D8%A7%D8%B2%DB%8C-%D9%85%D8%AD%D8%AF%D8%A8---%D8%AF%D8%B1-%D8%AD%D8%A7%D9%84-%D8%AA%DA%A9%D9%85%DB%8C%D9%84.html">OCW</a></div>
 <div class="menu-category">Assignments</div>
 <div class="menu-item"><a href="homework.html">Homework</a></div>
 <div class="menu-item"><a href="readings.html">Readings</a></div>
@@ -122,7 +123,7 @@ applications. Interior-point methods. Applications to signal processing, statist
 <p>This course should benefit anyone who uses or will use scientific computing or optimization in engineering or related work (e.g., machine learning, finance). More specifically, people from the following departments and fields: Mathematical Sciences (especially computer science and applied mathematics); Computer Engineering (especially areas like machine learning, robotics, computer graphics, algorithms &amp; complexity, computational geometry); Electrical Engineering (especially areas like signal and image processing, communications, control, EDA &amp; CAD). The course may be useful to students and researchers in several other fields as well: Computational Mathematics, Operations Research, Statistics, Economics.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-06-05 10:08:41 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-06-09 12:29:46 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
