--- a/cvx/courseinfo.html
+++ b/cvx/courseinfo.html
@@ -107,8 +107,8 @@ to write simple scripts, so basic familiarity with elementary programming will b
 <table class="imgtable"><tr><td>
 <img src="more_info.png" alt="More info" width="100px" />&nbsp;</td>
 <td align="left"><p>Concentrates on recognizing and solving convex optimization problems that arise in applications. Convex sets, functions, and optimization problems. Basics of convex analysis. Least-squares, linear and quadratic programs, semidefinite programming, minimax, extremal volume, and other problems. Optimality conditions, duality theory, theorems of alternative, and 
-applications. Interior-point methods. Applications to signal processing, statistics and machine learning, control and mechanical engineering, digital and analog circuit design, and finance. Please click on the image to the left for more information.
-</p>
+applications. Interior-point methods. Applications to signal processing, statistics and machine learning, control and mechanical engineering, digital and analog circuit design, and finance. Please click on the image to the left for more information.</p>
+</td></tr></table>
 <h2>Course objectives</h2>
 <ul>
 <li><p>to give students the tools and training to recognize convex optimization problems that arise in applications</p>
@@ -125,7 +125,7 @@ applications. Interior-point methods. Applications to signal processing, statist
 <p>This course should benefit anyone who uses or will use scientific computing or optimization in engineering or related work (e.g., machine learning, finance). More specifically, people from the following departments and fields: Mathematical Sciences (especially computer science and applied mathematics); Computer Engineering (especially areas like machine learning, robotics, computer graphics, algorithms &amp; complexity, computational geometry); Electrical Engineering (especially areas like signal and image processing, communications, control, EDA &amp; CAD). The course may be useful to students and researchers in several other fields as well: Computational Mathematics, Operations Research, Statistics, Economics.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-06-11 19:47:29 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-06-11 19:48:38 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
