--- a/cvx/courseinfo.html
+++ b/cvx/courseinfo.html
@@ -104,11 +104,9 @@ to write simple scripts, so basic familiarity with elementary programming will b
 <p>This class has <b>no</b> formal quizzes. There are online quizzes on <a href="./quizzes.html" target=&ldquo;blank&rdquo;>this page</a>. These are just for fun; they are not graded and your responses are not logged.
 </p>
 <h2>Catalog description</h2>
-<table class="imgtable"><tr><td>
-<a href="https://t.me/MCS_SGC/456"><img src="more_info.jpg" alt="More info" width="120px" height="120px" /></a>&nbsp;</td>
-<td align="left"><p>Concentrates on recognizing and solving convex optimization problems that arise in applications. Convex sets, functions, and optimization problems. Basics of convex analysis. Least-squares, linear and quadratic programs, semidefinite programming, minimax, extremal volume, and other problems. Optimality conditions, duality theory, theorems of alternative, and 
-applications. Interior-point methods. Applications to signal processing, statistics and machine learning, control and mechanical engineering, digital and analog circuit design, and finance. Please click on the image to the left for more information.</p>
-</td></tr></table>
+<p>Concentrates on recognizing and solving convex optimization problems that arise in applications. Convex sets, functions, and optimization problems. Basics of convex analysis. Least-squares, linear and quadratic programs, semidefinite programming, minimax, extremal volume, and other problems. Optimality conditions, duality theory, theorems of alternative, and 
+applications. Interior-point methods. Applications to signal processing, statistics and machine learning, control and mechanical engineering, digital and analog circuit design, and finance. 
+</p>
 <h2>Course objectives</h2>
 <ul>
 <li><p>to give students the tools and training to recognize convex optimization problems that arise in applications</p>
@@ -122,10 +120,13 @@ applications. Interior-point methods. Applications to signal processing, statist
 </li>
 </ul>
 <h2>Intended audience</h2>
-<p>This course should benefit anyone who uses or will use scientific computing or optimization in engineering or related work (e.g., machine learning, finance). More specifically, people from the following departments and fields: Mathematical Sciences (especially computer science and applied mathematics); Computer Engineering (especially areas like machine learning, robotics, computer graphics, algorithms &amp; complexity, computational geometry); Electrical Engineering (especially areas like signal and image processing, communications, control, EDA &amp; CAD). The course may be useful to students and researchers in several other fields as well: Computational Mathematics, Operations Research, Statistics, Economics.</p>
+<table class="imgtable"><tr><td>
+<a href="https://t.me/MCS_SGC/456"><img src="more_info.jpg" alt="More info" width="120px" height="120px" /></a>&nbsp;</td>
+<td align="left"><p>This course should benefit anyone who uses or will use scientific computing or optimization in engineering or related work (e.g., machine learning, finance). More specifically, people from the following departments and fields: Mathematical Sciences (especially computer science and applied mathematics); Computer Engineering (especially areas like machine learning, robotics, computer graphics, algorithms &amp; complexity, computational geometry); Electrical Engineering (especially areas like signal and image processing, communications, control, EDA &amp; CAD). The course may be useful to students and researchers in several other fields as well: Computational Mathematics, Operations Research, Statistics, Economics. Please click on the image to the left for more information.</p>
+</td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-06-11 19:52:21 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-06-11 19:54:25 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
