--- a/cvx/home.html
+++ b/cvx/home.html
@@ -57,7 +57,7 @@ MathJax.Hub.Config({
 <p>Term: Spring 2020 | Units: 3 | Section: 01 | Students enrolled: 50 | Lectures: Sun, Tue 9:00&ndash;10:30am @ Aleph 23 | Exam Date/Time: 7/20/20 8:00am | Prerequisite: Linear Algebra I</p>
 </div></div>
 <table class="imgtable"><tr><td>
-<img src="https://dcp.stanford.edu/static/dcp_sandbox/images/convex.svg" alt="A quadratic function" width="100px" />&nbsp;</td>
+<img src="max_paraboloid.svg" alt="Maximum of a paraboloid" width="200px" />&nbsp;</td>
 <td align="left"><p>Convex sets, functions, and optimization problems. The basics of convex analysis and theory of convex programming: optimality conditions, duality theory, theorems of alternative, and applications. Least-squares, linear and quadratic programs, semidefinite programming, and geometric programming. Numerical algorithms for smooth and equality constrained problems; interior-point methods for inequality constrained problems. Applications to systems biology, computational geometry, statistics, machine learning, and electrical engineering. </p>
 </td></tr></table>
 <h2>Announcements</h2>
@@ -83,7 +83,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-06-11 19:54:25 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-06-16 16:42:31 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
