--- a/cvx/home.html
+++ b/cvx/home.html
@@ -57,7 +57,7 @@ MathJax.Hub.Config({
 <p>Term: Spring 2020 | Units: 3 | Section: 01 | Students enrolled: 50 | Lectures: Sun, Tue 9:00&ndash;10:30am @ Aleph 23 | Exam Date/Time: 7/20/20 8:00am | Prerequisite: Linear Algebra I</p>
 </div></div>
 <table class="imgtable"><tr><td>
-<img src="max_paraboloid.svg" alt="Maximum of a paraboloid" width="200px" />&nbsp;</td>
+<img src="max_paraboloid.svg" alt="Maximum of a paraboloid" width="300px" />&nbsp;</td>
 <td align="left"><p>Convex sets, functions, and optimization problems. The basics of convex analysis and theory of convex programming: optimality conditions, duality theory, theorems of alternative, and applications. Least-squares, linear and quadratic programs, semidefinite programming, and geometric programming. Numerical algorithms for smooth and equality constrained problems; interior-point methods for inequality constrained problems. Applications to systems biology, computational geometry, statistics, machine learning, and electrical engineering. </p>
 </td></tr></table>
 <h2>Announcements</h2>
@@ -76,14 +76,14 @@ MathJax.Hub.Config({
 </li>
 <li><p><a href="homework.html" target=&ldquo;blank&rdquo;>Homework 5</a> is posted. That finishes up the first round of assignments. There will be no lectures and homeworks on weeks 7 &amp; 8 to observe the Nowruz holiday. Our class will resume on Sunday, April 5th. We recommend that you read sections of the book that you may have missed, or re-read sections that still confuse you during the break. We also recommend that you study the documentation for CVX*, skipping only the very driest sections. In particular, we expect you to know the <a href="https://dcp.stanford.edu/" target=&ldquo;blank&rdquo;>DCP</a> rules.</p>
 </li>
-<li><p>Due to the ongoing situation relating to the COVID-19 coronavirus outbreak, the in-class midterm quiz has been canceled in the best interests of students and is replaced by a pair of <a href="homework.html" target=&ldquo;blank&rdquo;>projects</a> due Saturday 6/20/20.
+<li><p>Due to the ongoing situation relating to the COVID-19 coronavirus outbreak, the in-class midterm quiz has been canceled in the best interests of students and is replaced by a pair of <a href="homework.html" target=&ldquo;blank&rdquo;>projects</a>.
 
 </p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-06-16 16:42:31 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-06-16 16:49:13 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
