updated the website

--- a/cvx/quizzes.html
+++ b/cvx/quizzes.html
@@ -53,7 +53,7 @@ MathJax.Hub.Config({
 <div id="subtitle"><a href="http://math.sharif.edu/">Department of Mathematical Sciences</a>,&nbsp;<a href="http://www.sharif.ir/">Sharif University of Technology</a><br /></div>
 </div>
 <table class="imgtable"><tr><td>
-<img src="quiz.png" alt="Quiz" width="100px" />&nbsp;</td>
+<img src="quiz.png" alt="Quiz" width="100px" height="100px" />&nbsp;</td>
 <td align="left"><p>The online quizzes below are meant to cover basic material
 from the textbook. Most of them can be done without paper and pencil, but a few do require a few calculations or a drawing to answer. They are not graded, and your responses are not logged.</p>
 </td></tr></table>
@@ -81,7 +81,7 @@ from the textbook. Most of them can be done without paper and pencil, but a few 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-06-16 16:49:13 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-06-16 16:57:58 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
