--- a/publications.html
+++ b/publications.html
@@ -50,7 +50,7 @@ S.A. Marashi and M. Tefagh, <i>J. Theor. Biol.</i>, 2014.</p></dd>
 </td></tr></table>
 <h2>Dissertation</h2>
 <table class="imgtable"><tr><td>
-<img src="QR_code.png" alt="QR code" width="200px" />&nbsp;</td>
+<a href="https://books.google.com/books?id=iGTsxgEACAAJ"><img src="QR_code.png" alt="QR code" width="200px" height="200px" /></a>&nbsp;</td>
 <td align="left"><p><a href="https://searchworks.stanford.edu/view/13249450">Applications of convex optimization in metabolic network analysis</a><br />
 Advisor:&nbsp;<a href="https://web.stanford.edu/~boyd">Stephen P. Boyd</a></p>
 </td></tr></table>
