updated the website

--- a/cvx/home.html
+++ b/cvx/home.html
@@ -56,11 +56,10 @@ MathJax.Hub.Config({
 <div class="blockcontent">
 <p>Term: Spring 2020 | Units: 3 | Section: 01 | Students enrolled: 50 | Lectures: Sun, Tue 9:00&ndash;10:30am @ Aleph 23 | Exam Date/Time: 7/20/20 8:00am | Prerequisite: Linear Algebra I</p>
 </div></div>
-<p>{}{img<u>left}{max</u>paraboloid.svg}{Maximum of a paraboloid}{500}
-Convex sets, functions, and optimization problems. The basics of convex analysis and theory of convex programming: optimality conditions, duality theory, theorems of alternative, and applications. Least-squares, linear and quadratic programs, semidefinite programming, and geometric programming. Numerical algorithms for smooth and equality constrained problems; interior-point methods for inequality constrained problems. Applications to systems biology, computational geometry, statistics, machine learning, and electrical engineering. </p>
-<div class="infoblock">
-<div class="blockcontent">
-<h2>Announcements</h2>
+<table class="imgtable"><tr><td>
+<img src="max_paraboloid.svg" alt="Maximum of a paraboloid" width="500px" />&nbsp;</td>
+<td align="left"><p>Convex sets, functions, and optimization problems. The basics of convex analysis and theory of convex programming: optimality conditions, duality theory, theorems of alternative, and applications. Least-squares, linear and quadratic programs, semidefinite programming, and geometric programming. Numerical algorithms for smooth and equality constrained problems; interior-point methods for inequality constrained problems. Applications to systems biology, computational geometry, statistics, machine learning, and electrical engineering. </p>
+</td></tr></table>
 <ul>
 <li><p>Welcome to 22494 Convex Optimization, Spring semester 2020!</p>
 </li>
@@ -83,7 +82,7 @@ Convex sets, functions, and optimization problems. The basics of convex analysis
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-06-16 17:00:10 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-06-16 17:00:38 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
