updated the website

--- a/cvx/home.html
+++ b/cvx/home.html
@@ -60,6 +60,7 @@ MathJax.Hub.Config({
 <img src="max_paraboloid.svg" alt="Maximum of a paraboloid" width="500px" />&nbsp;</td>
 <td align="left"><p>Convex sets, functions, and optimization problems. The basics of convex analysis and theory of convex programming: optimality conditions, duality theory, theorems of alternative, and applications. Least-squares, linear and quadratic programs, semidefinite programming, and geometric programming. Numerical algorithms for smooth and equality constrained problems; interior-point methods for inequality constrained problems. Applications to systems biology, computational geometry, statistics, machine learning, and electrical engineering. </p>
 </td></tr></table>
+<h2>Announcements</h2>
 <ul>
 <li><p>Welcome to 22494 Convex Optimization, Spring semester 2020!</p>
 </li>
@@ -82,7 +83,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-06-16 17:00:38 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-06-16 17:00:57 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
