updated the website

--- a/cvx/quizzes.html
+++ b/cvx/quizzes.html
@@ -28,7 +28,7 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="http://stanford.edu/~boyd/cvxbook/">Textbook</a></div>
 <div class="menu-item"><a href="https://vclass.ecourse.sharif.edu/ch/mtefagh">Webinars</a></div>
 <div class="menu-item"><a href="quizzes.html" class="current">Quizzes</a></div>
-<div class="menu-item"><a href="http://ocw.sharif.edu/course/id/203/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87-%D8%B9%D9%84%D9%88%D9%85-%D8%B1%DB%8C%D8%A7%D8%B6%DB%8C/%D8%A8%D9%87%DB%8C%D9%86%D9%87-%D8%B3%D8%A7%D8%B2%DB%8C-%D9%85%D8%AD%D8%AF%D8%A8---%D8%AF%D8%B1-%D8%AD%D8%A7%D9%84-%D8%AA%DA%A9%D9%85%DB%8C%D9%84.html">OCW</a></div>
+<div class="menu-item"><a href="http://ocw.sharif.edu/course/id/203/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87-%D8%B9%D9%84%D9%88%D9%85-%D8%B1%DB%8C%D8%A7%D8%B6%DB%8C/%D8%A8%D9%87%DB%8C%D9%86%D9%87-%D8%B3%D8%A7%D8%B2%DB%8C-%D9%85%D8%AD%D8%AF%D8%A8.html">OCW</a></div>
 <div class="menu-category">Assignments</div>
 <div class="menu-item"><a href="homework.html">Homework</a></div>
 <div class="menu-item"><a href="readings.html">Readings</a></div>
@@ -81,7 +81,7 @@ from the textbook. Most of them can be done without paper and pencil, but a few 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-06-16 17:03:58 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-07-14 10:21:08 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
