updated the website

--- a/teaching.html
+++ b/teaching.html
@@ -33,6 +33,15 @@ MathJax.Hub.Config({
 </div>
 </div>
 <h2>Current classes</h2>
+<h3><b>22290</b> Topics in Mathematical Biology<br /></h3>
+<p>Term: Fall 2020 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: Sat, Mon 3:00&ndash;5:00pm | Exam Date/Time: TBD | Prerequisite: Convex Optimization<br /></p>
+<table class="imgtable"><tr><td>
+<img src="metnet_logo.png" alt="A metabolic network" width="250px" />&nbsp;</td>
+<td align="left"><p>This course discusses computational systems biology focusing on select topics in metabolomics in a well-balanced mixture of biology, mathematics, and computer science. We start by looking in detail at the mathematical underpinning of constraint-based analysis of genome-scale metabolic network reconstructions and provide a foundation for the analysis of optimization algorithms involved. The remainder of the quarter provides an overview of various papers and toolboxes from the literature. Students will explore concepts through a research-oriented term project that will require them to define goals, success metrics, and deliverables for a computational challenge in systems biology and implement and evaluate a solution.</p>
+</td></tr></table>
+<p>The textbook is <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/9781119188902" target=&ldquo;blank&rdquo;>Optimization Methods in Metabolic Networks</a>.
+</p>
+<h2>Previous classes</h2>
 <h3><a href="cvx/home.html"><b>22494</b> Convex Optimization</a><br /></h3>
 <p>Term: Spring 2020 | Units: 3 | Section: 01 | Students enrolled: 50 | Lectures: Sun, Tue 9:00&ndash;10:30am at Math 217 | Exam Date/Time: 6/28/20 9:00am | Prerequisite: Linear Algebra I<br /></p>
 <table class="imgtable"><tr><td>
