--- a/teaching.html
+++ b/teaching.html
@@ -37,7 +37,7 @@ MathJax.Hub.Config({
 <p>Term: Fall 2020 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: Sat, Mon 3:00&ndash;5:00pm | Exam Date/Time: TBD | Prerequisite: Convex Optimization<br /></p>
 <table class="imgtable"><tr><td>
 <img src="metnet_logo.png" alt="A metabolic network" width="250px" />&nbsp;</td>
-<td align="left"><p>This course discusses computational systems biology focusing on select topics in metabolomics in a well-balanced mixture of biology, mathematics, and computer science. We start by looking in detail at the mathematical underpinning of constraint-based analysis of genome-scale metabolic network reconstructions and provide a foundation for the analysis of optimization algorithms involved. The remainder of the quarter provides an overview of various papers and toolboxes from the literature. Students will explore concepts through a research-oriented term project that will require them to define goals, success metrics, and deliverables for a computational challenge in systems biology and implement and evaluate a solution.</p>
+<td align="left"><p>This course discusses computational systems biology focusing on select topics in metabolomics in a well-balanced mixture of biology, mathematics, and computer science. We start by looking in detail at the mathematical underpinning of constraint-based analysis of genome-scale metabolic network reconstructions and provide a foundation for the analysis of optimization algorithms involved. Subsequently, we provide an overview of various papers and toolboxes from the literature in the remainder of the semester. Students will explore concepts through a research-oriented term project that will require them to define goals, success metrics, and deliverables for a computational challenge in systems biology and implement and evaluate a solution.</p>
 </td></tr></table>
 <p>The textbook is <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/9781119188902" target=&ldquo;blank&rdquo;>Optimization Methods in Metabolic Networks</a>.
 </p>
@@ -45,7 +45,7 @@ MathJax.Hub.Config({
 <h3><a href="cvx/home.html"><b>22494</b> Convex Optimization</a><br /></h3>
 <p>Term: Spring 2020 | Units: 3 | Section: 01 | Students enrolled: 50 | Lectures: Sun, Tue 9:00&ndash;10:30am at Math 217 | Exam Date/Time: 6/28/20 9:00am | Prerequisite: Linear Algebra I<br /></p>
 <table class="imgtable"><tr><td>
-<img src="https://dcp.stanford.edu/static/dcp_sandbox/images/convex.svg" alt="A quadratic function" width="100px" />&nbsp;</td>
+<img src="https://dcp.stanford.edu/static/dcp_sandbox/images/convex.svg" alt="A quadratic function" width="250px" />&nbsp;</td>
 <td align="left"><p>Convex sets, functions, and optimization problems. The basics of convex analysis and theory of convex programming: optimality conditions, duality theory, theorems of alternative, and applications. Least-squares, linear and quadratic programs, semidefinite programming, and geometric programming. Numerical algorithms for smooth and equality constrained problems; interior-point methods for inequality constrained problems. Applications to systems biology, computational geometry, statistics, machine learning, and electrical engineering. </p>
 </td></tr></table>
 <p>The course materials are the same as <a href="https://web.stanford.edu/class/ee364a">EE364a</a> (Stanford) and <a href="http://www.seas.ucla.edu/~vandenbe/ee236b/ee236b.html">EE236b</a> (UCLA). Specifically, the textbook and lecture slides can be found <a href="http://stanford.edu/~boyd/cvxbook/">here</a>.</p>
