updated the website

--- a/teaching.html
+++ b/teaching.html
@@ -33,7 +33,7 @@ MathJax.Hub.Config({
 </div>
 </div>
 <h2>Current classes</h2>
-<h3><b>22290</b> Topics in Mathematical Biology<br /></h3>
+<h3><a href="bio/home.html"><b>22290</b> Topics in Mathematical Biology</a><br /></h3>
 <p>Term: Fall 2020 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: Sat, Mon 3:00&ndash;5:00pm | Exam Date/Time: TBD | Prerequisite: Convex Optimization<br /></p>
 <table class="imgtable"><tr><td>
 <img src="metnet_logo.png" alt="A metabolic network" width="250px" />&nbsp;</td>
