--- a/cvx/home.html
+++ b/cvx/home.html
@@ -76,14 +76,14 @@ MathJax.Hub.Config({
 </li>
 <li><p><a href="homework.html" target=&ldquo;blank&rdquo;>Homework 5</a> is posted. That finishes up the first round of assignments. There will be no lectures and homeworks on weeks 7 &amp; 8 to observe the Nowruz holiday. Our class will resume on Sunday, April 5th. We recommend that you read sections of the book that you may have missed, or re-read sections that still confuse you during the break. We also recommend that you study the documentation for CVX*, skipping only the very driest sections. In particular, we expect you to know the <a href="https://dcp.stanford.edu/" target=&ldquo;blank&rdquo;>DCP</a> rules.</p>
 </li>
-<li><p>Due to the ongoing situation relating to the COVID-19 coronavirus outbreak, the in-class midterm quiz has been canceled in the best interests of students and is replaced by a pair of <a href="homework.html" target=&ldquo;blank&rdquo;>projects</a>.
-
-</p>
+<li><p>Due to the ongoing situation relating to the COVID-19 coronavirus outbreak, the in-class midterm quiz has been canceled in the best interests of students and is replaced by a pair of <a href="homework.html" target=&ldquo;blank&rdquo;>projects</a>.</p>
+</li>
+<li><p><a href="finals/2020-final.pdf" target=&ldquo;blank&rdquo;>Final exam</a> is posted. Good luck!</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-07-19 19:01:20 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-07-20 10:53:07 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
