updated the website

--- a/cvx/courseinfo.html
+++ b/cvx/courseinfo.html
@@ -84,12 +84,12 @@ also serve as their office hours, starting the second week of class. Attendance 
 </li>
 <li><p><i>Midterm quiz</i>. The format is an in-class, 75 minute, closed book, closed notes midterm scheduled for Sunday April 5.</p>
 </li>
-<li><p><i>Final exam</i>.  The format is a 24 hour take home, scheduled for the last week of classes, nominally Tuesday June 9&ndash;10.</p>
+<li><p><i>Final exam</i>.  The format is a 24 hour take home, scheduled for the last week of classes, nominally Tuesday June 28&ndash;29.</p>
 </li></ol>
 </li>
-<li><p><b>Grading:</b> Homework 20%, midterm 10%, final exam 70%. These weights are approximate; we reserve the right to change them later.<br /></p>
+<li><p><b>Grading:</b> Homework 20%, midterm 10%, final exam 70%. These weights (\(\tilde{x}\)) are approximate; we reserve the right to change them later.<br /></p>
 <ol>
-<li><p><b>Update.</b> The final weights are the solution of the following linear program</p>
+<li><p><i>Update</i>. The final weights are the solution of the following linear program</p>
 </li>
 </ol>
 
@@ -99,7 +99,7 @@ also serve as their office hours, starting the second week of class. Attendance 
 \[
 \begin{array}{ll} 
 	\mbox{maximize} &amp; c^Tx \\ 
-	\mbox{subject to} &amp; 1^Tx = 1^T\tilde{x} \\ &amp; \dfrac{1}{a} \leq 	\dfrac{x_i}{\tilde{x}_i} \leq a, \quad 1\leq i\leq 3,
+	\mbox{subject to} &amp; 1^Tx = 1^T\tilde{x} \\ &amp; \frac{1}{2} \leq 	\frac{x_i}{\tilde{x}_i} \leq 2, \quad 1\leq i\leq 3
 \end{array}
 \]
 </p><p>where \(c_1\), \(c_2\), and \(c_3\) are the normalized homework, project, final exam grades, respectively.
@@ -139,7 +139,7 @@ applications. Interior-point methods. Applications to signal processing, statist
 </td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-07-22 07:54:19 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-07-22 08:09:26 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
