updated the website

--- a/cvx/final.html
+++ b/cvx/final.html
@@ -53,17 +53,17 @@ MathJax.Hub.Config({
 <div id="subtitle"><a href="http://math.sharif.edu/">Department of Mathematical Sciences</a>,&nbsp;<a href="http://www.sharif.ir/">Sharif University of Technology</a><br /></div>
 </div>
 <table class="imgtable"><tr><td>
-<img src="final_cdf.jpg" alt="Final CDF" width="300px" />&nbsp;</td>
-<td align="left"><p>The final exam will be a 24 hour take-home exam on Monday July 20. We will only be using remote release and turning in of the exams. Also please be sure to leave time for turning in your exam online&#8201;&mdash;&#8201;we will not be very forgiving of late turn-in times.<br />
-<b>Final exam statistics (2019):</b></p>
+<img src="final_cdf.png" alt="Final Histogram" width="600px" />&nbsp;</td>
+<td align="left"><p>The <a href="finals/2020-final.pdf" target=&ldquo;blank&rdquo;>final exam</a> will be a 24 hour take-home exam on Monday July 20. We will only be using remote release and turning in of the exams. Also please be sure to leave time for turning in your exam online&#8201;&mdash;&#8201;we will not be very forgiving of late turn-in times.<br />
+<b>Final exam statistics (2020):</b></p>
 <ul>
-<li><p>25th percentile: 118</p>
+<li><p>25th percentile: 47</p>
 </li>
-<li><p>Median: 141</p>
+<li><p>Median: 63</p>
 </li>
-<li><p>75th percentile: 161</p>
+<li><p>75th percentile: 70</p>
 </li>
-<li><p>Mean: 136</p>
+<li><p>Mean: 55.42</p>
 </li>
 </ul>
 </td></tr></table>
@@ -92,7 +92,7 @@ and <a href="solutions/final_13_sol.pdf" target=&ldquo;blank&rdquo;>solutions</a
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-07-22 08:15:31 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-07-28 09:28:31 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
