updated the website

--- a/cvx/courseinfo.html
+++ b/cvx/courseinfo.html
@@ -98,8 +98,8 @@ also serve as their office hours, starting the second week of class. Attendance 
 <p style="text-align:center">
 \[
 \begin{array}{ll} 
-	\mbox{maximize} &amp; c^Tx \\ 
-	\mbox{subject to} &amp; 1^Tx = 1^T\tilde{x} \\ &amp; \dfrac{1}{2} \leq 	\dfrac{x_i}{\tilde{x}_i} \leq 2, \quad 1\leq i\leq 3
+	\mbox{maximize} &amp; c^Tx + 2(1-a)\\ 
+	\mbox{subject to} &amp; 1^Tx = 1^T\tilde{x} \\ &amp; \dfrac{1}{a} \leq 	\dfrac{x_i}{\tilde{x}_i} \leq a, \quad 1\leq i\leq 3
 \end{array}
 \]
 </p><p>where \(c_1\), \(c_2\), and \(c_3\) are the normalized homework, project, final exam grades, respectively.
@@ -139,7 +139,7 @@ applications. Interior-point methods. Applications to signal processing, statist
 </td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-07-28 12:17:27 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-07-28 19:49:33 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
