updated the website

--- a/software.html
+++ b/software.html
@@ -32,7 +32,7 @@ MathJax.Hub.Config({
 <div id="subtitle"><a href="http://math.sharif.edu/">Department of Mathematical Sciences</a>,&nbsp;<a href="http://www.sharif.ir/">Sharif University of Technology</a>
 </div>
 </div>
-<h3>A COBRA toolbox extension for quantitative flux coupling analysis</h3>
+<h3><a href="https://mtefagh.github.io/qfca/">A COBRA toolbox extension for quantitative flux coupling analysis</a></h3>
 <ul>
 <li><p><b>Project name:</b> <tt>QFCA</tt></p>
 </li>
@@ -49,11 +49,11 @@ MathJax.Hub.Config({
 <li><p><b>Any restrictions to use by non-academics:</b> License needed</p>
 </li>
 </ul>
-<h3>A COBRA toolbox extension for context-specific metabolic network reconstruction</h3>
+<h3><a href="https://mtefagh.github.io/swiftcore/">A COBRA toolbox extension for context-specific metabolic network reconstruction</a></h3>
 <ul>
 <li><p><b>Project name:</b> <tt>SWIFTCORE</tt></p>
 </li>
-<li><p><b>Project homepage:</b> <a href="https://mtefagh.github.io/swiftcore/" target=&ldquo;blank&rdquo;>https://mtefagh.github.io/swiftcore/</a></p>
+<li><p><b>Project homepage:</b> <a href="https://web.stanford.edu/~boyd/papers/swiftcore.html" target=&ldquo;blank&rdquo;>https://web.stanford.edu/~boyd/papers/swiftcore.html</a></p>
 </li>
 <li><p><b>Operating system(s):</b> Platform independent</p>
 </li>
@@ -66,11 +66,11 @@ MathJax.Hub.Config({
 <li><p><b>Any restrictions to use by non-academics:</b> License needed</p>
 </li>
 </ul>
-<h3>A Julia package for sparse quantitative flux coupling analysis</h3>
+<h3><a href="https://mtefagh.github.io/sparseQFCA.jl/">A Julia package for sparse quantitative flux coupling analysis</a></h3>
 <ul>
 <li><p><b>Project name:</b> <tt>sparseQFCA.jl</tt></p>
 </li>
-<li><p><b>Project homepage:</b> <a href="https://pkg.julialang.org/docs/sparseQFCA/kNUWx/0.6.0/" target=&ldquo;blank&rdquo;>https://pkg.julialang.org/docs/sparseQFCA/kNUWx/0.6.0/</a></p>
+<li><p><b>Project homepage:</b> <a href="https://juliahub.com/docs/sparseQFCA/kNUWx/0.6.0/" target=&ldquo;blank&rdquo;>https://juliahub.com/docs/sparseQFCA/kNUWx/0.6.0/</a></p>
 </li>
 <li><p><b>Operating system(s):</b> Platform independent</p>
 </li>
