updated the website

--- a/teaching.html
+++ b/teaching.html
@@ -34,7 +34,7 @@ MathJax.Hub.Config({
 </div>
 <h2>Current classes</h2>
 <h3><a href="bio/home.html"><b>22290</b> Topics in Mathematical Biology</a><br /></h3>
-<p>Term: Fall 2020 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: Sat, Mon 3:00&ndash;5:00pm | Exam Date/Time: TBD | Prerequisite: Convex Optimization<br /></p>
+<p>Term: Fall 2020 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: Sat, Mon 3:00&ndash;5:00pm | Exam Date/Time: 1/18/21 9:00am | Prerequisite: Convex Optimization<br /></p>
 <table class="imgtable"><tr><td>
 <img src="metnet_logo.png" alt="A metabolic network" width="250px" />&nbsp;</td>
 <td align="left"><p>This course discusses computational systems biology focusing on select topics in fluxomics in a well-balanced mixture of biology, mathematics, and computer science. We start by looking in detail at the mathematical underpinning of constraint-based analysis of genome-scale metabolic network reconstructions and provide a foundation for the analysis of optimization algorithms involved. Subsequently, we provide an overview of various papers and toolboxes from the literature in the remainder of the semester. Students will explore concepts through a research-oriented term project that will require them to define goals, success metrics, and deliverables for a computational challenge in systems biology and implement and evaluate a solution.</p>
