updated the website

--- a/software.html
+++ b/software.html
@@ -33,6 +33,7 @@ MathJax.Hub.Config({
 </div>
 </div>
 <h3><a href="https://mtefagh.github.io/qfca/">A COBRA toolbox extension for quantitative flux coupling analysis</a></h3>
+<p>Compressed biological systems of tens of thousands of biochemical reactions by a hierarchical organization of pathways which speeds up the downstream analysis up to \(3\times\) in addition to saving memory and storage space</p>
 <ul>
 <li><p><b>Project name:</b> <tt>QFCA</tt></p>
 </li>
@@ -50,6 +51,7 @@ MathJax.Hub.Config({
 </li>
 </ul>
 <h3><a href="https://mtefagh.github.io/swiftcore/">A COBRA toolbox extension for context-specific metabolic network reconstruction</a></h3>
+<p>Accelerated the state-of-the-art in genome-scale metabolic network reconstruction more than \(10\times\) by convex optimization techniques such as factorization, approximation, and regularization</p>
 <ul>
 <li><p><b>Project name:</b> <tt>SWIFTCORE</tt></p>
 </li>
@@ -67,6 +69,7 @@ MathJax.Hub.Config({
 </li>
 </ul>
 <h3><a href="https://mtefagh.github.io/sparseQFCA.jl/">A Julia package for sparse quantitative flux coupling analysis</a></h3>
+<p>Developed a registered Julia package which quantifies the redundancies in genome-scale metabolic networks and provides local sparse certificates which are both efficiently verifiable and interpretable</p>
 <ul>
 <li><p><b>Project name:</b> <tt>sparseQFCA.jl</tt></p>
 </li>
