--- a/cvx/homework.html
+++ b/cvx/homework.html
@@ -135,7 +135,7 @@ The second project involves writing a short report (1-2 pages) of a paper you re
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-09-20 21:11:58 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-09-28 08:46:28 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
