--- a/papers/ABCD.html
+++ b/papers/ABCD.html
@@ -35,10 +35,10 @@ MathJax.Hub.Config({
 </div>
 <ul>
 <li><p><a href="ABCD.pdf" target=&ldquo;blank&rdquo;>Manuscript</a><br />
-This is a post-peer-review, pre-copyedit version of an article published in <i>ICBTA</i>. The final authenticated version is available online at: <a href="https://dl.acm.org/conference/icbta/proceedings" target=&ldquo;blank&rdquo;>https://dl.acm.org/conference/icbta/proceedings</a></p>
+This is a post-peer-review, pre-copyedit version of an article published in <i>Proceedings of 3rd International Conference on Blockchain Technology and Applications (ICBTA 2020)</i>. The final authenticated version is available online at: <a href="https://dl.acm.org/conference/icbta/proceedings" target=&ldquo;blank&rdquo;>https://dl.acm.org/conference/icbta/proceedings</a></p>
 </li>
-<li><p><a href="https://github.com/incentivus/ICBTA" target=&ldquo;blank&rdquo;><tt>ABCD</tt></a><br />
-Inspired by the recent boom in <i>decentralized finance</i> (DeFi) and the unprecedented success of flash loan projects in this ecosystem, we introduce a decentralized debt derivative named <i>atomic bonded crosschain debt</i> (ABCD) to bridge the gap between the growth of lending protocols on Ethereum and other blockchains specifically Bitcoin. We think of ABCD as the alphabet of interoperability for DeFi and as a credit infrastructure which unlike the current protocols is not limited by requiring either smart contracts, over-collateralization, or instantaneous payback.</p>
+<li><p><a href="https://github.com/incentivus/ABCD" target=&ldquo;blank&rdquo;><tt>Reference implementation</tt></a><br />
+Inspired by the recent boom in <i>decentralized finance</i> (DeFi) and the unprecedented success of flash loan projects in this ecosystem, we introduce a decentralized debt derivative named <i>atomic bonded crosschain debt</i> (ABCD) to bridge the gap between the growth of lending protocols on Ethereum and other UTXO-based blockchains specifically Bitcoin. We think of ABCD as the alphabet of interoperability for DeFi and as a credit infrastructure which unlike the current protocols is not limited by requiring either smart contracts, over-collateralization, or instantaneous payback.</p>
 </li>
 </ul>
 </td>
