--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@ MathJax.Hub.Config({
 <img src="https://binancex.dev/static/fellows/015_Incentivus_Mojtaba.png" alt="Mojtaba photo" width="100px" />&nbsp;</td>
 <td align="left"><p><span id="badgeCont20"><script type="text/javascript" src="https://publons.com/mashlets?el=badgeCont20&rid=ABB-2391-2020&size=small"></script></span> Mojtaba Tefagh</p>
 <dl>
-<dt>Assistant Professor</dt>
-<dd><p></p></dd>
-<dt><a href="http://optimizer.math.sharif.edu/">Sharif Optimization and Applications Laboratory</a></dt>
+<dt><a href="http://soal.math.sharif.edu/">Sharif Optimization and Applications Laboratory</a></dt>
 <dd><p></p></dd>
 <dt><a href="http://math.sharif.edu/">Department of Mathematical Sciences</a></dt>
 <dd><p></p></dd>
