--- a/teaching.html
+++ b/teaching.html
@@ -33,15 +33,16 @@ MathJax.Hub.Config({
 </div>
 </div>
 <h2>Current classes</h2>
+<p></p>
+<h2>Previous classes</h2>
 <h3><a href="bio/home.html"><b>22290</b> Topics in Mathematical Biology</a><br /></h3>
 <p>Term: Fall 2020 | Units: 4 | Section: 01 | Students enrolled: 30 | Lectures: Sat, Mon 3:00&ndash;5:00pm | Exam Date/Time: 1/18/21 9:00am | Prerequisite: Convex Optimization<br /></p>
 <table class="imgtable"><tr><td>
-<img src="metnet_logo.png" alt="A metabolic network" width="250px" />&nbsp;</td>
+<img src="word_art.png" alt="Word cloud of COBRA keywords" width="250px" />&nbsp;</td>
 <td align="left"><p>This course discusses computational systems biology focusing on select topics in fluxomics in a well-balanced mixture of biology, mathematics, and computer science. We start by looking in detail at the mathematical underpinning of constraint-based analysis of genome-scale metabolic network reconstructions and provide a foundation for the analysis of optimization algorithms involved. Subsequently, we provide an overview of various papers and toolboxes from the literature in the remainder of the semester. Students will explore concepts through a research-oriented term project that will require them to define goals, success metrics, and deliverables for a computational challenge in systems biology and implement and evaluate a solution.</p>
 </td></tr></table>
 <p>The textbook is <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/9781119188902" target=&ldquo;blank&rdquo;>Optimization Methods in Metabolic Networks</a>. <a href="https://searchworks.stanford.edu/view/13249450" target=&ldquo;blank&rdquo;>Applications of convex optimization in metabolic network analysis</a> can serve as an auxiliary text. Moreover, we will use the <a href="http://works.bepress.com/scott_hinton/41/" target=&ldquo;blank&rdquo;>constraint-based modeling lectures</a> from a course on metabolic modeling taught by Scott Hinton.
 </p>
-<h2>Previous classes</h2>
 <h3><a href="cvx/home.html"><b>22494</b> Convex Optimization</a><br /></h3>
 <p>Term: Spring 2020 | Units: 3 | Section: 01 | Students enrolled: 50 | Lectures: Sun, Tue 9:00&ndash;10:30am at Math 217 | Exam Date/Time: 6/28/20 9:00am | Prerequisite: Linear Algebra I<br /></p>
 <table class="imgtable"><tr><td>
