updated the website

--- a/teaching.html
+++ b/teaching.html
@@ -33,7 +33,11 @@ MathJax.Hub.Config({
 </div>
 </div>
 <h2>Current classes</h2>
+<h3>Linear Algebra I</h3>
 <p></p>
+<h3>Applied Linear Algebra</h3>
+<p>This course is originally developed by <a href="http://stanford.edu/~boyd/" target=&ldquo;blank&rdquo;>Stephen P. Boyd</a>. The course materials are the same as <a href="https://web.stanford.edu/class/engr108/">ENGR108</a> at Stanford. Specifically, the textbook and lecture slides can be found <a href="https://web.stanford.edu/~boyd/vmls/">here</a>.
+</p>
 <h2>Previous classes</h2>
 <h3><a href="bio/home.html"><b>22290</b> Topics in Mathematical Biology</a><br /></h3>
 <p>Term: Fall 2020 | Units: 4 | Section: 01 | Students enrolled: 30 | Lectures: Sat, Mon 3:00&ndash;5:00pm | Exam Date/Time: 1/18/21 9:00am | Prerequisite: Convex Optimization<br /></p>
@@ -49,7 +53,7 @@ MathJax.Hub.Config({
 <img src="https://dcp.stanford.edu/static/dcp_sandbox/images/convex.svg" alt="A quadratic function" width="250px" />&nbsp;</td>
 <td align="left"><p>Convex sets, functions, and optimization problems. The basics of convex analysis and theory of convex programming: optimality conditions, duality theory, theorems of alternative, and applications. Least-squares, linear and quadratic programs, semidefinite programming, and geometric programming. Numerical algorithms for smooth and equality constrained problems; interior-point methods for inequality constrained problems. Applications to systems biology, computational geometry, statistics, machine learning, and electrical engineering. </p>
 </td></tr></table>
-<p>The course materials are the same as <a href="https://web.stanford.edu/class/ee364a">EE364a</a> (Stanford) and <a href="http://www.seas.ucla.edu/~vandenbe/ee236b/ee236b.html">EE236b</a> (UCLA). Specifically, the textbook and lecture slides can be found <a href="http://stanford.edu/~boyd/cvxbook/">here</a>.</p>
+<p>The course materials are the same as <a href="https://web.stanford.edu/class/ee364a/">EE364a</a> (Stanford) and <a href="http://www.seas.ucla.edu/~vandenbe/ee236b/ee236b.html">EE236b</a> (UCLA). Specifically, the textbook and lecture slides can be found <a href="http://stanford.edu/~boyd/cvxbook/">here</a>.</p>
 </td>
 </tr>
 </table>
